third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.23/tests/ui-msrv/try_transmute_ref-src-not-immutable-intobytes.stderr
error[E0277]: the trait bound `NotZerocopy<AU16>: zerocopy::IntoBytes` is not satisfied
  --> tests/ui-msrv/try_transmute_ref-src-not-immutable-intobytes.rs:19:48
   |
19 |     let src_not_into_bytes: Result<&AU16, _> = try_transmute_ref!(&NotZerocopy(AU16(0)));
   |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `zerocopy::IntoBytes` is not implemented for `NotZerocopy<AU16>`
   |
note: required by a bound in `try_transmute_ref`
  --> src/util/macro_util.rs
   |
   |     Src: IntoBytes + Immutable,
   |          ^^^^^^^^^ required by this bound in `try_transmute_ref`
   = note: this error originates in the macro `try_transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy<AU16>: zerocopy::Immutable` is not satisfied
  --> tests/ui-msrv/try_transmute_ref-src-not-immutable-intobytes.rs:19:48
   |
19 |     let src_not_into_bytes: Result<&AU16, _> = try_transmute_ref!(&NotZerocopy(AU16(0)));
   |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected an implementor of trait `zerocopy::Immutable`
   |
note: required by a bound in `try_transmute_ref`
  --> src/util/macro_util.rs
   |
   |     Src: IntoBytes + Immutable,
   |                      ^^^^^^^^^ required by this bound in `try_transmute_ref`
   = note: this error originates in the macro `try_transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
